--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ title: Home
                             </div>
                         </div>
                         <a href="{{ post.permalink | relative_url }}" class="card-title"><h3>{{ post.title }}</h3></a>
-                        <p class="text-description text-gray">{{ post.content | truncatewords: 25 | strip_html }}</p>
+                        <p class="text-description text-gray">{{ post.content | markdownify | truncatewords: 30 }}</p>
                     </div>
                 </div>
             </div>
