--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@ title: Home
             </div>
         </div>
     </div>
-    <a href="" data-scroll="true" data-id="#firstSection" class="scroll-arrow hidden-xs hidden-sm">
-        <i class="fa fa-angle-down"></i>
-    </a>
+    <div>
+        <a href="" data-scroll="true" data-id="#firstSection" class="scroll-arrow hidden-xs hidden-sm">
+            <i class="fa fa-angle-down front-page-arrow"></i>
+        </a>
+    </div>
 </div>
 
-<div class="section">
+<div class="section" id="firstSection">
     <div class="container">
         <div class="row">
             <div class="title-area">
