--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@ title: Home
     </div>
     <div>
         <a href="" data-scroll="true" data-id="#firstSection" class="scroll-arrow hidden-xs hidden-sm">
-            <i class="fa fa-angle-down front-page-arrow"></i>
+            <div class="icon front-page-arrow">
+                <i class="pe-7s-angle-down-circle"></i>
+            </div>
         </a>
     </div>
 </div>
@@ -144,7 +146,7 @@ title: Home
                                 <i class="pe-7s-ball"></i>
                             </div>
                             <h3 class="text-white">Games</h3>
-                            <p class="description">I once created a game</p>
+                            <p class="description text-white">I once created a game</p>
                         </div>
                     </div>
                 </a>
@@ -155,7 +157,7 @@ title: Home
                                 <i class="pe-7s-notebook"></i>
                             </div>
                             <h3 class="text-white">My Books</h3>
-                            <p class="description">The books I have written and edited</p>
+                            <p class="description text-white">The books I have written and edited</p>
                         </div>
                     </div>
                 </a>
@@ -166,7 +168,7 @@ title: Home
                                 <i class="pe-7s-micro"></i>
                             </div>
                             <h3 class="text-white">Media Appearances</h3>
-                            <p class="description">Interviews and profiles in different media outlets</p>
+                            <p class="description text-white">Interviews and profiles</p>
                         </div>
                     </div>
                 </a>
@@ -177,7 +179,7 @@ title: Home
                                 <i class="pe-7s-diskette"></i>
                             </div>
                             <h3 class="text-white">Software</h3>
-                            <p class="description">Some of the software I have created</p>
+                            <p class="description text-white">Some of the software I have created</p>
                         </div>
                     </div>
                 </a>
