A bunch of cleanups

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Home
                 <div class="separator-container">
                     <div class="separator separator"><img src="{{ '/assets/img/martlet.svg' | relative_url }}" height="35rem" /></div>
                 </div>
-                <h5>A Mathematician, a Different Kind of Mathematician, and a Statistician</h5>
+                <h5>A Mathematician, a Different Kind of<br/>Mathematician, and a Statistician</h5>
             </div>
         </div>
     </div>
@@ -29,6 +29,7 @@ title: Home
             </div>
         </a>
     </div>
+
 </div>
 
 <div class="section" id="firstSection">
