Fix description metadata

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: base
 title: Home
+subtitle: The website of James Howard, a Mathematician, a Different Kind of Mathematician, and a Statistician
 ---
 <div class="section section-header">
     <div class="parallax filter filter-color-black">
