--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
                             <i class="pe-7s-pen"></i>
                         </div>
                         <h3>Scholarship</h3>
-                        <p class="description">fgDedicated to excellence in research and innovation, my work aims to expand boundaries and explore new horizons</p>
+                        <p class="description">Dedicated to excellence in research and innovation, my work aims to expand boundaries and explore new horizons</p>
                     </div>
                 </div>
             </a>
