Move primary logos to inline SVG

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-1 col-1"></div>
                     <div class="col-lg-4 col-md-4 col-sm-10 col-10">
-                        <img src="{{ '/assets/img/identity/jameshoward-logo.svg' | relative_url }}" width="40%" alt="James Howard vertical logo">
+                        {% svg "/assets/img/identity/jameshoward-logo.svg" width="40%" alt="James Howard vertical logo" %}
                     </div>
                 </div>
                 <div class="separator-container">
