--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
 
 <div class="section section-get-started">
     <div class="parallax filter filter-color-black">
-        <div class="image" style="background-image: url({{ '/assets/img/heading-martlets.webp' | relative_url }})"></div>
+        <div class="image index-fade" style="background-image: url({{ '/assets/img/heading-martlets.webp' | relative_url }})"></div>
         <div class="container">
             <div class="title-area">
                 <h2 class="text-white">Dive Deeper into My Universe</h2>
