Reworking logo components

--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
         </div>
         <div class="container">
             <div class="content">
-                <div class="row">
+                <div class="row mt-5">
                     <div class="col-lg-4 col-md-4 col-sm-1 col-1"></div>
                     <div class="col-lg-4 col-md-4 col-sm-10 col-10">
-                        {% svg "/assets/img/identity/jameshoward-logo.svg" width="60%" alt="James Howard vertical logo" %}
+                        {% svg "/assets/img/identity/jameshoward-arms.svg" width="40%" alt="James Howard coat of arms" %}
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-lg-4 col-md-4 col-sm-1 col-1"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-10 col-10">
+                        {% svg "/assets/img/identity/jameshoward-wordmark.svg" width="60%" alt="James Howard wordmark" %}
                     </div>
                 </div>
                 <div class="separator-container">
