--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
                 <div class="row mt-5">
                     <div class="col-lg-4 col-md-4 col-sm-1 col-1"></div>
                     <div class="col-lg-4 col-md-4 col-sm-10 col-10">
-                        {% svg "/assets/img/identity/jameshoward-arms.svg" width="40%" alt="James Howard coat of arms" %}
+                        <img src="/assets/img/identity/jameshoward-arms.svg" width="40%" alt="James Howard coat of arms" />
                     </div>
                 </div>
                 <div class="row mt-5">
