Added more posts link to homepage

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
         </div>
 
         <div id="masonry-container" class="row">
-            {% for post in site.posts limit: 6 %}
+            {% for post in site.posts limit: 8 %}
             <div class="item col-md-4 my-5">
                 <div class="card card-blog">
                     <a href="{{ post.permalink | relative_url }}" class="header" aria-label="{{ post.title }}">
@@ -195,6 +195,18 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
                 </div>
             </div>
             {% endfor %}
+            <div class="item col-md-4 my-5">
+                <div class="card card-blog">
+                    <a href="{{ '/blog' | relative_url }}" class="header" aria-label="Blog">
+                        <img src="{{ '/assets/img/blog.webp' | relative_url }}" class="image-header" alt="">
+                    </a>
+                    <div class="content">
+                        <a href="{{ post.permalink | relative_url }}"
+                           class="card-title" aria-label="{{ post.title }}"><h3>Blog</h3></a>
+                        <p class="text-description text-gray card-blog-excerpt">Click here for older posts...</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
