Blog link correction

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
                         <img src="{{ '/assets/img/blog.webp' | relative_url }}" class="image-header" alt="">
                     </a>
                     <div class="content">
-                        <a href="{{ post.permalink | relative_url }}"
+                        <a href="{{ '/blog' | relative_url }}"
                            class="card-title" aria-label="{{ post.title }}"><h3>Blog</h3></a>
                         <p class="text-description text-gray card-blog-excerpt">Click here for older posts...</p>
                     </div>
