--- a/index.html
+++ b/index.html
@@ -8,29 +8,65 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
     <div class="parallax filter filter-color-black">
         <div class="image" style="background-image: url({{ '/assets/img/header-home.webp' | relative_url }})">
         </div>
+
         <div class="container">
-            <div class="content">
-                <div class="row mt-5">
-                    <div class="col-lg-4 col-md-4 col-sm-1 col-1"></div>
-                    <div class="col-lg-4 col-md-4 col-sm-10 col-10">
-                        <img src="/assets/img/identity/jameshoward-arms.svg" width="40%" alt="James Howard coat of arms" />
+            <div class="content hidden-sm hidden-xs">
+                <!-- Horizontal Layout -->
+                <div class="row mt-5 hidden-sm hidden-xs" style="display: flex; align-items: center;">
+                    <div class="col-lg-2 col-md-2 hidden-sm hidden-xs"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"
+                         style="display: flex; justify-content: center; align-items: center;">
+                        <img src="/assets/img/identity/jameshoward-arms.svg"
+                             class="img-responsive"
+                             style="transform: scale(0.9); transform-origin: center;"
+                             alt="James Howard coat of arms" />
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"
+                         style="display: flex; flex-direction: column; justify-content: center; align-items: center; margin-top: 20px;">
+                        <div style="text-align: center; width: 80%; margin: 0 auto;">
+                            <img src="/assets/img/identity/jameshoward-wordmark.svg"
+                                 class="img-responsive"
+                                 style="width: 100%;"
+                                 alt="James Howard wordmark" />
+                            <div class="separator-container" style="margin-top: 20px;">
+                                <div class="separator" style="display: flex; justify-content: center; align-items: center;">
+                                    <img src="{{ '/assets/img/martlet.svg' | relative_url }}"
+                                         style="height: 35px;"
+                                         alt="Decorative text bullet" />
+                                </div>
+                                <h5 style="margin-top: 15px;">A Mathematician, a Different Kind of<br />Mathematician, and a Statistician</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-2 hidden-sm hidden-xs"></div>
+                </div>
+            </div>
+            <div class="content hidden-lg hidden-md">
+                <!-- Vertical Layout -->
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <div class="row">
+                            <img src="/assets/img/identity/jameshoward-arms.svg"
+                                 class="img-responsive mx-auto" width="50%"
+                                 alt="James Howard coat of arms" />
+                        </div>
+                        <div class="row pt-4">
+                            <img src="/assets/img/identity/jameshoward-wordmark.svg"
+                                 class="img-responsive mx-auto"
+                                 style="width: 50%;"
+                                 alt="James Howard wordmark" />
+                            <div class="separator separator-info">
+                                <img src="{{ '/assets/img/martlet.svg' | relative_url
+                                          }}" height="35rem" alt="Decorative text bullet" />
+                            </div>
+                            <h5 style="margin-top: 15px;">A Mathematician, a Different Kind of<br />Mathematician, and a Statistician</h5>
+                        </div>
                     </div>
                 </div>
-                <div class="row mt-5">
-                    <div class="col-lg-4 col-md-4 col-sm-1 col-1"></div>
-                    <div class="col-lg-4 col-md-4 col-sm-10 col-10">
-                        {% svg "/assets/img/identity/jameshoward-wordmark.svg" width="60%" alt="James Howard wordmark" %}
-                    </div>
-                </div>
-                <div class="separator-container">
-                    <div class="separator separator"><img src="{{ '/assets/img/martlet.svg' | relative_url }}" height="35rem"
-                                                          alt="Decorative text bullet" /></div>
-                </div>
-                <h5>A Mathematician, a Different Kind of<br/>Mathematician, and
-                    a Statistician</h5>
             </div>
         </div>
     </div>
+
     <div>
         <a href="" data-scroll="true" data-id="#firstSection" class="scroll-arrow hidden-xs hidden-sm" aria-label="Read more about James Howard">
             <div class="icon front-page-arrow">
