Fix for bigger screens

--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
         <div class="container">
             <div class="content hidden-sm hidden-xs">
                 <!-- Horizontal Layout -->
-                <div class="row mt-5 p-5 hidden-sm hidden-xs" style="display: flex; align-items: center;">
-                    <div class="col-lg-2 col-md-2 hidden-sm hidden-xs"></div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 m-5 p-5"
-                         style="display: flex; justify-content: center; align-items: center;">
-                        {% svg '/assets/img/identity/jameshoward-arms.svg'
-                             class="img-responsive"
-                             style="transform: scale(0.9); transform-origin: center;"
-                             alt="James Howard coat of arms" %}
+                <div class="row mt-5 p-5" style="display: flex; align-items: center;">
+                    <div class="col-lg-2 col-md-2"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 m-5 p-5 inline-svg-coa-container">
+                        {% svg '/assets/img/identity/jameshoward-arms.svg' class="img-responsive" alt="James Howard coat of arms" %}
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"
                          style="display: flex; flex-direction: column; justify-content: center; align-items: center; margin-top: 20px;">
@@ -28,13 +24,11 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
                                  class="img-responsive"
                                  style="width: 100%;"
                                  alt="James Howard wordmark" />
-                            <div class="separator-container" style="margin-top: 20px;">
-                                <div class="separator" style="display: flex; justify-content: center; align-items: center;">
-                                    <img src="{{ '/assets/img/martlet.svg' | relative_url }}"
-                                         style="height: 35px;"
-                                         alt="Decorative text bullet" />
+                            <div class="separator-container">
+                                <div class="separator separator">
+                                    <img src="{{ '/assets/img/martlet.svg' | relative_url }}" height="35rem" alt="Decorative text bullet" />
                                 </div>
-                                <h5 style="margin-top: 15px;">A Mathematician, a Different Kind of<br />Mathematician, and a Statistician</h5>
+                                <h5 class="balanced-text">A Mathematician, a Different Kind of Mathematician, and a Statistician</h5>
                             </div>
                         </div>
                     </div>
