--- a/index.html
+++ b/index.html
@@ -253,9 +253,8 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
                                                       alt="Decorative text bullet" /></div>
             </div>
             <div class="row">
-                <div class="col-md-3 col-sm-0"></div>
                 <a href="{{ '/honors' | relative_url }}">
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-4 col-sm-6">
                         <div class="danger-icon">
                             <div class="icon text-danger">
                                 <i class="pe-7s-medal"></i>
@@ -268,17 +267,31 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
                         </div>
                     </div>
                 </a>
+                <a href="{{ '/coat-of-arms' | relative_url }}">
+                    <div class="col-md-4 col-sm-6">
+                        <div class="danger-icon">
+                            <div class="icon text-danger">
+                                <i class="pe-7s-shield"></i>
+                            </div>
+                            <h3 class="text-white">Coat of Arms</h3>
+                            <p class="description text-white">
+                                A visual expression of identity, lineage, and
+                                aspiration drawn from heraldic tradition
+                            </p>
+                        </div>
+                    </div>
+                </a>
+
                 <a href="{{ '/family' | relative_url }}">
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-4 col-sm-6">
                         <div class="danger-icon">
                             <div class="icon text-danger">
                                 <i class="pe-7s-users"></i>
                             </div>
                             <h3 class="text-white">Ancestry</h3>
                             <p class="description text-white">
-                                A journey into my family's past, exploring the
-                                stories, traditions, and people who shaped who I
-                                am today
+                                Journey into my family's past, exploring the
+                                stories, traditions, and people who led to me
                             </p>
                         </div>
                     </div>
