--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
             <div class="content hidden-sm hidden-xs">
                 <!-- Horizontal Layout -->
                 <div class="row mt-5 p-5" style="display: flex; align-items: center;">
-                    <div class="col-lg-2 col-md-2"></div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 m-5 p-5 inline-svg-coa-container">
-                        {% svg '/assets/img/identity/jameshoward-arms.svg' class="img-responsive" alt="James Howard coat of arms" %}
+                    <div class="col-lg-1 col-md-1"></div>
+                    <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 m-5 inline-svg-coa-container">
+                        {% svg '/assets/img/identity/jameshoward-arms.svg' class="img-responsive p-5" alt="James Howard coat of arms" %}
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"
                          style="display: flex; flex-direction: column; justify-content: center; align-items: center; margin-top: 20px;">
