Finalized color refresh

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
     <div class="container">
         <div class="title-area">
             <h2>Most Recent Posts</h2>
-            <div class="separator separator-danger"><img src="{{ '/assets/img/martlet-danger.svg' | relative_url }}" height="35rem"
+            <div class="separator separator-info"><img src="{{ '/assets/img/martlet-info.svg' | relative_url }}" height="35rem"
                                                          alt="Decorative text bullet" /></div>
         </div>
 
@@ -255,8 +255,8 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
             <div class="row">
                 <a href="{{ '/honors' | relative_url }}">
                     <div class="col-md-4 col-sm-6">
-                        <div class="danger-icon">
-                            <div class="icon text-danger">
+                        <div class="warning-icon">
+                            <div class="icon text-warning">
                                 <i class="pe-7s-medal"></i>
                             </div>
                             <h3 class="text-white">Honors</h3>
@@ -269,8 +269,8 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
                 </a>
                 <a href="{{ '/coat-of-arms' | relative_url }}">
                     <div class="col-md-4 col-sm-6">
-                        <div class="danger-icon">
-                            <div class="icon text-danger">
+                        <div class="warning-icon">
+                            <div class="icon text-warning">
                                 <i class="pe-7s-shield"></i>
                             </div>
                             <h3 class="text-white">Coat of Arms</h3>
@@ -284,8 +284,8 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
 
                 <a href="{{ '/family' | relative_url }}">
                     <div class="col-md-4 col-sm-6">
-                        <div class="danger-icon">
-                            <div class="icon text-danger">
+                        <div class="warning-icon">
+                            <div class="icon text-warning">
                                 <i class="pe-7s-users"></i>
                             </div>
                             <h3 class="text-white">Ancestry</h3>
